--- a/eazeWork/src/main/res/layout/fragment_work_from_home_request.xml
+++ b/eazeWork/src/main/res/layout/fragment_work_from_home_request.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,14 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@color/fragment_bg">
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
-
+        <include layout="@layout/progress_root_container"></include>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -373,4 +366,4 @@
         </ScrollView>
     </RelativeLayout>
 
-</LinearLayout>
+</FrameLayout>
