--- a/eazeWork/src/main/res/layout/ll_create_new_leave.xml
+++ b/eazeWork/src/main/res/layout/ll_create_new_leave.xml
@@ -18,9 +18,6 @@
         android:orientation="vertical"
         android:background="@color/white"
        >
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -354,68 +351,65 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/padding_default"
-            android:visibility="gone">
+            android:visibility="visible">
 
-
-            <RelativeLayout
+            <LinearLayout
+                android:weightSum="4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_mini">
-
+                android:orientation="horizontal">
                 <CheckBox
+                    android:padding="@dimen/margin_3"
                     android:id="@+id/rb_25_day"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:button="@drawable/checkbox_selector"
-                    android:paddingLeft="@dimen/padding_mini"
                     android:text="Qtr Day"
+                    android:textSize="@dimen/font_11"
                     android:visibility="visible"/>
 
                 <CheckBox
+                    android:padding="@dimen/margin_3"
                     android:id="@+id/rb_half_day"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_gravity="right|end"
-                    android:layout_marginLeft="@dimen/padding_mini"
                     android:button="@drawable/checkbox_selector"
-                    android:paddingLeft="@dimen/padding_mini"
                     android:text="Half Day"
+                    android:textSize="@dimen/font_11"
                     android:visibility="visible"/>
 
+                <CheckBox
+                    android:textSize="@dimen/font_11"
+                    android:padding="@dimen/margin_3"
+                    android:id="@+id/rb_75_day"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/checkbox_selector"
+                    android:text="0.75 Day"
+                    android:visibility="visible"/>
 
-            </RelativeLayout>
+                <CheckBox
+                    android:textSize="@dimen/font_11"
+                    android:padding="@dimen/margin_3"
+                    android:id="@+id/rb_full_day"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/checkbox_selector"
+                    android:checked="true"
+                    android:text="Full Day"
+                    android:visibility="visible"/>
+            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
-                <CheckBox
-                    android:id="@+id/rb_75_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/padding_default"
-                    android:layout_marginLeft="@dimen/padding_mini"
-                    android:button="@drawable/checkbox_selector"
-                    android:paddingLeft="@dimen/padding_mini"
-                    android:text="0.75 Day"
-                    android:visibility="visible"/>
 
-                <CheckBox
-                    android:id="@+id/rb_full_day"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="@dimen/padding_default"
-                    android:button="@drawable/checkbox_selector"
-                    android:checked="true"
-                    android:layout_marginLeft="@dimen/padding_mini"
-                    android:layout_gravity="right|end"
-                    android:paddingLeft="@dimen/padding_mini"
-                    android:text="Full Day"
-                    android:visibility="visible"/>
 
             </RelativeLayout>
 
@@ -423,11 +417,10 @@
         </LinearLayout>
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/halfLl"
             >
 
@@ -452,11 +445,13 @@
                     android:layout_marginTop="@dimen/padding_default"
                     android:button="@drawable/checkbox_selector"
                     android:paddingLeft="@dimen/padding_mini"
+                    android:textSize="@dimen/font_10"
                     android:text="First Half"
                     android:checked="true"
                     android:visibility="visible"/>
 
                 <CheckBox
+                    android:textSize="@dimen/font_10"
                     android:id="@+id/secondHalfCB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -488,7 +483,6 @@
             android:layout_margin="10dp"
             android:background="@drawable/focus_style_gray"
             android:ems="10"
-            android:text=""
             android:padding="@dimen/margin_default"
             android:textColor="@color/black">
 
