--- a/eazeWork/src/main/res/values-v21/dimens.xml
+++ b/eazeWork/src/main/res/values-v21/dimens.xml
@@ -22,7 +22,8 @@
     <dimen name="radius_mini">5dp</dimen>
     <dimen name="radius_large">20dp</dimen>
 
-    
+    <dimen name="font_10">10sp</dimen>
+    <dimen name="font_11">11sp</dimen>
     <dimen name="font_12">12sp</dimen>
     <dimen name="font_16">16sp</dimen>
     <dimen name="font_20">20sp</dimen>
