--- a/eazeWork/src/main/res/values/dimens.xml
+++ b/eazeWork/src/main/res/values/dimens.xml
@@ -32,7 +32,7 @@
     <dimen name="chip_close_icon_size2">24dp</dimen>
     <dimen name="chip_close_icon_padding">3dp</dimen>
 
-
+    <dimen name="font_10">10sp</dimen>
     <dimen name="font_12">12sp</dimen>
     <dimen name="font_14">14sp</dimen>
     <dimen name="font_16">16sp</dimen>
